// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CeoBreadcrumb · snapshots > snapshot: com sub-empresa "Mult Seguros e Consórcios" 1`] = `
<div
  class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
  data-testid="ceo-breadcrumb"
>
  <nav
    aria-label="Breadcrumb"
    class="flex items-center gap-1.5 text-xs text-muted-foreground min-w-0"
  >
    <button
      class="inline-flex items-center gap-1 hover:text-foreground transition-colors shrink-0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
       
      <span>
        Início
      </span>
    </button>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-right w-3.5 h-3.5 opacity-60 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
    <span
      class="text-foreground font-medium shrink-0"
    >
      Performance da Empresa
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-right w-3.5 h-3.5 opacity-60 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
    <span
      class="truncate min-w-0 max-w-[45vw] sm:max-w-[240px] md:max-w-[360px]"
      data-testid="ceo-breadcrumb-context"
      title="Mult Seguros e Consórcios"
    >
      Mult Seguros e Consórcios
    </span>
  </nav>
  <span
    class="inline-flex items-center gap-1.5 self-start sm:self-auto shrink-0 rounded-full border border-primary/30 bg-primary/5 px-2.5 py-1 text-[11px] font-medium text-primary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-crown w-3 h-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.562 3.266a.5.5 0 0 1 .876 0L15.39 8.87a1 1 0 0 0 1.516.294L21.183 5.5a.5.5 0 0 1 .798.519l-2.834 10.246a1 1 0 0 1-.956.734H5.81a1 1 0 0 1-.957-.734L2.02 6.02a.5.5 0 0 1 .798-.519l4.276 3.664a1 1 0 0 0 1.516-.294z"
      />
      <path
        d="M5 21h14"
      />
    </svg>
    <span
      class="hidden sm:inline"
    >
      Painel executivo completo
    </span>
    <span
      class="sm:hidden"
    >
      Painel executivo
    </span>
  </span>
</div>
`;

exports[`CeoBreadcrumb · snapshots > snapshot: contextName vazio → fallback "Minha empresa" 1`] = `
<div
  class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
  data-testid="ceo-breadcrumb"
>
  <nav
    aria-label="Breadcrumb"
    class="flex items-center gap-1.5 text-xs text-muted-foreground min-w-0"
  >
    <button
      class="inline-flex items-center gap-1 hover:text-foreground transition-colors shrink-0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
       
      <span>
        Início
      </span>
    </button>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-right w-3.5 h-3.5 opacity-60 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
    <span
      class="text-foreground font-medium shrink-0"
    >
      Performance da Empresa
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-right w-3.5 h-3.5 opacity-60 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
    <span
      class="truncate min-w-0 max-w-[45vw] sm:max-w-[240px] md:max-w-[360px]"
      data-testid="ceo-breadcrumb-context"
      title="Minha empresa"
    >
      Minha empresa
    </span>
  </nav>
  <span
    class="inline-flex items-center gap-1.5 self-start sm:self-auto shrink-0 rounded-full border border-primary/30 bg-primary/5 px-2.5 py-1 text-[11px] font-medium text-primary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-crown w-3 h-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.562 3.266a.5.5 0 0 1 .876 0L15.39 8.87a1 1 0 0 0 1.516.294L21.183 5.5a.5.5 0 0 1 .798.519l-2.834 10.246a1 1 0 0 1-.956.734H5.81a1 1 0 0 1-.957-.734L2.02 6.02a.5.5 0 0 1 .798-.519l4.276 3.664a1 1 0 0 0 1.516-.294z"
      />
      <path
        d="M5 21h14"
      />
    </svg>
    <span
      class="hidden sm:inline"
    >
      Painel executivo completo
    </span>
    <span
      class="sm:hidden"
    >
      Painel executivo
    </span>
  </span>
</div>
`;
